# Binary-Legend-Assets-Converter

./: CMakeLists.txt
blac/: CMakeLists.txt  blac.cpp  filedata.cpp  filedata.h  mesh.h  meshinfo.h  scene.cpp  scene.h  tmd.cpp  tmd.h  tmdobjecttable.h  tmdprimitive.h  uv.h  vector3.h
